gitops/apps/warpgate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warpgate
  labels:
    name: warpgate
